--- a/src/index.html
+++ b/src/index.html
@@ -32,14 +32,14 @@
                           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="kalender.html">Kalender</a>
+                          <a class="nav-link" href="galerie.html">Home</a>
                           <li class="nav-item">
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="form1.html">Kontakt</a>
+                            <a class="nav-link" href="form1.html">Galerie</a>
                           </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="galerie.html">Galerie</a>
+                          <a class="nav-link" href="form1.html">Kontakt</a>
                         </li>
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
