--- a/src/galerie.html
+++ b/src/galerie.html
@@ -24,7 +24,7 @@
      <div class="container">
             <div class="row">
                 <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h1 class="gallery-title">Galerie</h1>
+                    <h1 class="galerieTitel">Galerie</h1>
                 </div>
 
                 <div class="ButtonBlock">
@@ -36,9 +36,9 @@
 
                 </div>
                 <br/>
+                <div class="platzhalter col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                </div>
 
-                <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6"></div>
-                                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6"></div>
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal1">
@@ -67,7 +67,7 @@
                         "Dann mache es mal gut, Buster!"
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                       </div>
                     </div>
                   </div>
@@ -95,7 +95,7 @@
                               denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
@@ -112,7 +112,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">MBerti</h5>
+                            <h5 class="modal-title" id="ModalLabel">Berti</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -128,7 +128,7 @@
                               Je vertrauter jedoch ihm eine Person ist, desto eher duldet er es, wenn diese sich einem "verbotenen" Platz nähert.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
@@ -144,18 +144,20 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">BIOS</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                              BIOS ist eine lebensfrohe Ziege die sich hervorragend für einen gemütlichen Abend auf der Couch eignet.
+                              Durch Ihr sanftes Wesen und Ihre umgängliche Art ist sie sowohl für Familien als auch für alleinstehende der
+                              perfekte Abendliche Couchbegleiter. BIOS kommt aus einer schlechten Zirkushaltung und hat daher bereits viele
+                              traumatische Erlebnisse zu verarbeiten, was Ihrem sanften Charakter und Ihrer einfühlsamen Art keinen Abbruch getan hat.
+
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
@@ -183,7 +185,7 @@
                               denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
@@ -211,13 +213,13 @@
                               denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    <div class="galerieFeld col-lg-4 col-md-6 col-sm-4 col-xs-6 filter nagetiere">
+                    <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal7">
                         <img src="Bilder/nagetier2.png" class="img-responsive"/>
                     </button>
@@ -239,13 +241,13 @@
                               denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    <div class="galerieFeld col-lg-4 col-md-4 col-sm-4 col-xs-6 filter ziegen">
+                    <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal8">
                         <img src="Bilder/ziege3.png" class="img-responsive"/>
                     </button>
@@ -268,13 +270,13 @@
                               denn leichte Zurückhaltung legt er immer noch an den Tag.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    <div class="galerieFeld col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hunde">
+                    <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal9">
                         <img src="Bilder/hund3.png" class="img-responsive"/>
                     </button>
@@ -296,13 +298,13 @@
                               denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    <div class="galerieFeld col-lg-4 col-md-4 col-sm-4 col-xs-6 filter nagetiere">
+                    <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal10">
                         <img src="Bilder/nagetier3.png" class="img-responsive"/>
                     </button>
@@ -324,13 +326,13 @@
                               denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
                     </div>
 
-                    <div class="galerieFeld col-lg-4 col-md-4 col-sm-4 col-xs-6 filter katzen">
+                    <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal11">
                         <img src="Bilder/katze2.png" class="img-responsive"/>
                     </button>
