--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <meta charset="utf-8">
     <head>
-        <link href="style.css" rel="stylesheet">
-        <title> BIOS - Eine Zweite Chance</title>
+        <link href="css/style.css" rel="stylesheet">
+        <title> BIOS - Eine zweite Chance</title>
          <link rel="stylesheet" href="css/bootstrap.min.css">
          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
@@ -29,29 +29,22 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="galerie.html">Home</a>
+                          <a class="nav-link" href="home.html">Home</a>
                           <li class="nav-item">
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="form1.html">Galerie</a>
+                            <a class="nav-link" href="galerie.html">Galerie</a>
                           </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="form1.html">Kontakt</a>
+                          <a class="nav-link" href="formular.html">Kontakt</a>
                         </li>
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                          </a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="kalender.html">Kalender</a>
                         </li>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+
                       </ul>
                       <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Suche nach etwas!" aria-label="Search">
