--- a/src/galerie.html
+++ b/src/galerie.html
@@ -169,7 +169,7 @@
                               Je vertrauter jedoch ihm eine Person ist, desto eher duldet er es, wenn diese sich einem "verbotenen" Platz nähert.
                           </div>
                           <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
+                            <button type="button" class="btn" data-dismiss="modal">Schließen</button>
                           </div>
                         </div>
                       </div>
@@ -215,15 +215,15 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">Quintus</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                              Quintus ist ein sehr schüchterner Nager der die fähtigkeit besitzt sich in windeseile in ihr Herz zu zaubern,
+                              mit diesem kleinen Freund werden Sie (wenn Sie auch sein Herz gewonnen haben) mit sicherheit den ein oder
+                              anderen schönen tag verbringen. Wer weis? vielleicht wird das ja eine Partnerschaft für immer?
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn" data-dismiss="modal">Schließen</button>
@@ -243,15 +243,15 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">Simone</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                             Simone ist das Paradebeispiel für eine verschmuste und vertrauenswürdige Ziege mit der sich jeder Ziegenliebhaber Glücklich schätzen kann.
+                             Zudem ist sie Kinderlieb, Seniorenverträglich und macht nicht wegen jeder kleinigkeit ein riesen Theater.
+                             Rundum pflegeleicht also! Wenn Sie auf der Suche nach der idealen Ziege sind dann melden sie sich gerne bei und für ein Probeschmusen mit Simone!
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn" data-dismiss="modal">Schließen</button>
@@ -271,15 +271,15 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">Ludwig</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                            Ludwig, zu viele Wort um dieses einzigartige Kerlchen zu beschreiben! Sie sind auf der Suche nach dem ausergewöhnlichen? stellen
+                            sich gerne neuen Herausforderungen und sind bereit Ihr Leben voll und ganz einem anderen Wesen unterzuordnen? dann melden sie sich
+                            doch für Ludwig! er ist ein Garant für unterhaltssame Nachmittage, ihre Freunde werden staunen!
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn" data-dismiss="modal">Schließen</button>
@@ -328,15 +328,13 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">Hagrid</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                             Sie sind auf der suche nach einem neuen Hund? stellen sich gerne neuen Herausforderungen! Hagrid wartet bereits auf Sie und ist bereit in sein neues zu Hause einzuziehen!
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn" data-dismiss="modal">Schließen</button>
@@ -356,15 +354,16 @@
                       <div class="modal-dialog" >
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">Freddi</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                              Freddi sucht wieder Anschluss... Ihr kumpel ist leider verstorben und sie möchte ihren Lebensabend nicht alleine verbringen.
+                              Freddi sucht einen Kumpel, der auch schon im Seniorenalter ist.
+
+                              Sie ist 8 Jahre alt und sterilisiert.
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn" data-dismiss="modal">Schließen</button>
@@ -384,15 +383,14 @@
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel">Tolkien</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
                           <div class="modal-body">
-                              Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel.
-                              Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken,
-                              denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
+                              der Karthäuser Mix könnte als Einzelkatze umziehen, da er im Haus auch oft allein für sich auf dem Kratzbaum liegt (er ist da ein echter Chiller).
+                              Er sucht katzenerfahrene Menschen, die ihn nicht bedrängen (dann wehrt er sich) sondern einfach von allein kommen lassen.
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn" data-dismiss="modal">Close</button>
