Button focus verändert

--- a/src/galerie.html
+++ b/src/galerie.html
@@ -47,7 +47,7 @@
                   <a class="nav-link" href="kalender.html">Kalender</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="imperssum.html">Impressum</a>
+                  <a class="nav-link" href="impressum.html">Impressum</a>
                 </li>
 
               </ul>
@@ -66,6 +66,18 @@
             <div class="row">
                 <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h1 class="galerieTitel">Galerie</h1>
+                </div>
+
+                <div class="textBlock col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                    Lieber Besucher, <br /> <br />
+                    Sie möchten einem Tier ein neues Zu Hause geben? dann sind sie hier genau richtig!
+                    In unserer Galerie haben Sie die Möglickeit unsere aktuellen Bewohner näher kennen zu lernen
+                    und sich zu verlieben! Gerne können Sie Ihren neuen Liebling auch persönlich kennenlernen,
+                    hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular! <br />
+                    Wir freuen uns auf Ihren Besuch! <br /> <br />
+                    Ihr Tierheim-Team
+
                 </div>
 
                 <div class="ButtonBlock">
@@ -398,7 +410,12 @@
                         </div>
                       </div>
                     </div>
+
+                    <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <h1 class="galerieTitel"></h1>
+                    </div>
                 </div>
+
     </section>
 
     <footer>
