js abgeändert für active funktion der Buttons

--- a/src/galerie.html
+++ b/src/galerie.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
 
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -35,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="galerie.html">Galerie</a>
@@ -76,12 +78,12 @@
                     und sich zu verlieben! Gerne können Sie Ihren neuen Liebling auch persönlich kennenlernen,
                     hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular! <br />
                     Wir freuen uns auf Ihren Besuch! <br /> <br />
-                    Ihr Tierheim-Team
+                    <d>Ihr Tierheim-Team </d>
 
                 </div>
 
                 <div class="ButtonBlock">
-                    <button class="btn btn-default filter-button" data-filter="all">Alle</button>
+                    <button class="btn btn-default filter-button filter-button-active" data-filter="all">Alle</button>
                     <button class="btn btn-default filter-button" data-filter="hunde">Hunde</button>
                     <button class="btn btn-default filter-button" data-filter="katzen">Katzen</button>
                     <button class="btn btn-default filter-button" data-filter="nagetiere">Nagetiere</button>
@@ -104,7 +106,7 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="ModalLabel">Buster</h5>
+                        <h5 class="modal-title" id="ModalLabel"><d>Buster</d></h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -137,7 +139,7 @@
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Spencer</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -165,7 +167,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Berti</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Berti</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -197,7 +199,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">BIOS</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>BIOS</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -227,7 +229,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Quintus</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Quintus</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -255,7 +257,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Simone</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Simone</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -283,7 +285,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Ludwig</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Ludwig</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -310,7 +312,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Ritschi</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Ritschi</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -340,7 +342,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Hagrid</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Hagrid</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -366,7 +368,7 @@
                       <div class="modal-dialog" >
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Freddi</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Freddi</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -395,7 +397,7 @@
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel">Tolkien</h5>
+                            <h5 class="modal-title" id="ModalLabel"><d>Tolkien</d></h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
